--- a/packages/react/react-web/package.json
+++ b/packages/react/react-web/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@withgates/react-web",
-  "version": "1.0.0-alpha.3",
+  "version": "1.0.0-alpha.7",
   "description": "React utilities for WithGates",
   "main": "dist/index.js",
+  "module": "dist/index.js",
   "types": "types/index.d.ts",
   "type": "module",
   "license": "MIT",
@@ -15,7 +16,7 @@
     "url": "https://github.com/with-gates/withgates-react.git",
     "directory": "packages/react/react-web"
   },
-  "homepage": "https://github.com/with-gates/withgates-react/tree/main/packages/react/react-web#readme",
+  "homepage": "https://github.com/with-gates/withgates-react/tree/main/packages/react/react-web",
   "keywords": [
     "react",
     "withgates",
@@ -27,25 +28,36 @@
   "publishConfig": {
     "access": "public"
   },
+  "exports": {
+    ".": {
+      "types": "./types/index.d.ts",
+      "import": "./dist/index.js",
+      "require": "./dist/index.cjs"
+    }
+  },
   "scripts": {
-    "build": "tsc",
-    "watch": "tsc -w",
+    "build": "tsup src/index.ts --format esm,cjs --dts",
+    "watch": "tsup src/index.ts --format esm,cjs --dts --watch",
     "type-check": "tsc --noEmit",
     "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
-    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,md}\""
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,json,md}\"",
+    "publish": "npm run build && npm publish --access public"
   },
   "dependencies": {
+    "crypto-js": "^4.2.0",
     "idb": "^8.0.0",
     "react": "^18.3.1"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/node": "^20.0.0",
-    "typescript": "^5.6.3",
-    "prettier": "^3.2.0",
+    "@types/react": "^18.2.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
-    "prettier-plugin-organize-imports": "^3.2.0"
+    "prettier": "^3.2.0",
+    "prettier-plugin-organize-imports": "^3.2.0",
+    "tsup": "^8.0.0",
+    "typescript": "^5.6.3"
   },
   "peerDependencies": {
     "react": "*"
