--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "license": "MIT",
   "private": true,
   "workspaces": [
-    "packages/*",
-    "shared/*"
+    "shared/*",
+    "packages/*"
   ]
 }
