--- a/packages/react/react-web/package.json
+++ b/packages/react/react-web/package.json
@@ -60,6 +60,7 @@
     "typescript": "^5.6.3"
   },
   "peerDependencies": {
-    "react": "*"
+    "react": "*",
+    "@withgates/core-js": "*"
   }
 }
