--- a/packages/react/react-web/tsconfig.json
+++ b/packages/react/react-web/tsconfig.json
@@ -5,7 +5,7 @@
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "declaration": true,
     "declarationDir": "types",
-    "moduleResolution": "node",
+    "moduleResolution": "bundler",
     "jsx": "react",
     "strict": true,
     "esModuleInterop": true,
