(chore): improve react-web sdk (#2)
* core package

* react-web improvements

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -2,11 +2,10 @@
   "compilerOptions": {
     "target": "ES2018",
     "module": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["ESNext"],
     "declaration": true,
     "declarationDir": "types",
-    "moduleResolution": "bundler",
-    "jsx": "react",
+    "moduleResolution": "node",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
